<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/student_details"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />


            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:padding="13dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editRollNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/enter_your_roll_no"
                android:inputType="number"
                android:padding="13dp"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/enter_your_age"
                android:inputType="number"
                android:padding="13dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:shadowColor="#7F7F7F"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="Add"
                    android:textColor="#FFFFFF"
                    android:textSize="19sp" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:shadowColor="#7F7F7F"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="Update"
                    android:textColor="#FFFFFF"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:shadowColor="#7F7F7F"
                    android:shadowDx="0"
                    android:shadowDy="0"

                    android:shadowRadius="5"
                    android:text="Delete"
                    android:textColor="#FFFFFF"
                    android:textSize="19sp" />

                <Button
                    android:id="@+id/btnDeleteTable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:shadowColor="#7F7F7F"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/delete_table"
                    android:textColor="#FFFFFF"
                    android:textSize="19sp" />



            </LinearLayout>

            <Button
                android:id="@+id/btnDeleteDb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:shadowColor="#7F7F7F"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/delete_database"
                android:textColor="#FFFFFF"
                android:textSize="19sp" />



        </LinearLayout>

    </ScrollView>


</LinearLayout>

